--- a/course/admin/assets/css/custom.css
+++ b/course/admin/assets/css/custom.css
@@ -13,8 +13,9 @@
     GENERAL  STYLES    
     =============================================*/
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: Forte;
     line-height:30px;
+    font-size:20px;
 }
 
  #wrapper {
